# starsdb

./: CMakeLists.txt  IFS.txt  README.md
src/: CMakeLists.txt  main.cpp
